MonetDB5/src/mal/Tests/tst071.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2003, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet_5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet_5/Linux/var/MonetDB
# dbname:demo
## parsing operations with multi-assignments
#function swap(x:int,y:int):(a:int,b:int);
#	a:=y; b:=x;
#	return(a,b);
#end swap;
function Admin.swap(x:int,y:int):(a:int,b:int); #0  (a:int)(b:int)<-(x:int)(y:int)
    a := y; #1  (a:int)<-(y:int)
    b := x; #2  (b:int)<-(x:int)
    return (a,b); #3  (a:int)(b:int)<-(a:int)(b:int)
end swap; #4  
#
#(x,y):= swap(1,2);
#print(x);
#print(y);
#a:= swap(3,4);
#print(a);
#
!ERROR: 'swap' undefined in Admin.main[4]
function Admin.main():int; #0  (main:int)
    (x,y):=Admin.swap(1,2); #1  (x:int)(y:int)<-($3:int)($4:int)
    io.print(x); #2 CMDprint_val ($5:int)<-(x:int)
    io.print(y); #3 CMDprint_val ($6:int)<-(y:int)
    a := swap(3,4); #4  unknown (a:any)<-($8:int)($9:int)
    io.print(a); #5 CMDprint_val ($10:int)<-(a:any)
end main; #6  
>